--- a/frontend/src/app/admin-setting/admin-setting.component.html
+++ b/frontend/src/app/admin-setting/admin-setting.component.html
@@ -1,3 +1,6 @@
-<p>admin-setting works!</p>
-
-<app-sidenav></app-sidenav>
+<div class="container">
+    <app-sidenav></app-sidenav>
+    <div class="content">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
