--- a/frontend/src/app/sidenav/sidenav.component.sass
+++ b/frontend/src/app/sidenav/sidenav.component.sass
@@ -1,21 +1,19 @@
 .sidenav
-    background: #263238
+    background: #ffffff
     transition: all .5s ease
-    position: fixed
+    position: absolute
     z-index: 1
-    top: 0
-    width: 5rem
+    width: 20rem
     height: 100vh
-    box-shadow: 0.063rem 0 1.25rem 0 #8690a3
 
     .logo-container
         display: flex
         align-items: center
-        padding: 0.938rem 0.938rem 0 0.938rem
+        padding-left: 0.5rem
         width: 100%
 
         .logo
-            #fff
+            color: #555
             text-align: center
             width: 3rem
             min-width: 3rem
@@ -23,33 +21,14 @@
             padding: 0.313rem
             font-size: 24px
             font-weight: 900
-            cursor: pointer
+            // cursor: pointer
             border: none
 
         .logo-text
             margin-left: 1.5rem
             font-size: 24px
             font-weight: 700
-            color: #fff
-
-
-
-        .btn-close
-            margin-left: auto
-            cursor: pointer
-            width: 2rem
-            height: 2rem
-            border-radius: 50%
-            background-color: transparent
-            border: none
-
-            .fa-time
-                color: #fff
-                font-size: 24px
-
-
-.sidenav-collapsed
-    width: 16.5625rem
+            color: #555
 
 .sidenav-nav
     list-style: none
@@ -64,21 +43,22 @@
     .sidenav-nav-item
         width: 100%
         margin-bottom: 0.625rem
+        // border-bottom: 1px solid #d8d6d6
 
         .sidenav-nav-link
             display: flex
             align-items: center 
             height: 3rem
-            color: #f3f3f3
+            color: #555
             text-decoration: none
             border-radius: 0.625rem
             transition: all .3s ease
 
             .sidenav-link-icon
-                font-size: 22px
+                font-size: 15px
                 width: 2rem
                 min-width: 2rem
-                margin: 0 0.5rem
+                margin: 0 1px
                 text-align: center
 
             .sidenav-link-text
@@ -87,5 +67,20 @@
     
     .sidenav-nav-item:hover
         .sidenav-nav-link
-            background-color: #fff
-            color: #000
+            background-color: #e9e9e9
+            color: #444444
+
+
+// @media (max-width: 1199px)
+//   .sidenav 
+//     top: 95px
+
+
+// @media (max-width: 991px)
+//   .sidenav
+//     top: 78px
+
+
+// @media (max-width: 227px)
+//   .sidenav
+//     top: 118px
