--- a/frontend/src/app/event-features/event-specifics-details/event-specifics-details.component.html
+++ b/frontend/src/app/event-features/event-specifics-details/event-specifics-details.component.html
@@ -1,7 +1,7 @@
 <div class="circle-link mt-4">
 <button *ngIf="onAccess()" type="submit"
         (click)="addSpecificsToEvent()"
-        class="circle circle-container">Add Specifics</button>
+        class="circle circle-container">Add</button>
 </div>
   <div class="container my-5">
   <ng-container>
