--- a/frontend/src/app/event-features/event-edit/event-edit.component.html
+++ b/frontend/src/app/event-features/event-edit/event-edit.component.html
@@ -46,6 +46,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary" [disabled]="!eventForm.form.valid" (click)="updateEvent()">Update the event</button>
+        <button type="submit" class="btn btn-success" [disabled]="!eventForm.form.valid" (click)="addSpecifics()">Check the specifics</button>
       </form>
     </div>
   </div>
