--- a/frontend/src/app/recommendation/recommendation.component.sass
+++ b/frontend/src/app/recommendation/recommendation.component.sass
@@ -7,51 +7,48 @@
         width: 95%
         margin-top: 2rem
         margin-bottom: 2rem
-    
-.rating-system
-    margin-top: 1rem
-    display: flex
-    align-items: center  
-    width: 100%
-    height: 100%
-    margin-bottom: 0.5rem
-    margin-left: 1rem
 
-    p
-        align-items: center
-        margin: 0
-        margin-right: 1rem
-        font-size: 20px
-        font-weight: 500
+// .rating-system
+//     margin-top: 1rem
+//     display: flex
+//     align-items: center
+//     width: 100%
+//     height: 100%
+//     margin-bottom: 0.5rem
+//     margin-left: 1rem
 
+//     p
+//         align-items: center
+//         margin: 0
+//         margin-right: 1rem
+//         font-size: 20px
+//         font-weight: 500
 
-    .excellent, .very-good, .good
-        cursor: pointer
-        font-size: 1.5rem
-        color: #ccc
-        transition: color 200ms
-        margin-right: 0.5rem
+//     .excellent, .very-good, .good
+//         cursor: pointer
+//         font-size: 1.5rem
+//         color: #ccc
+//         transition: color 200ms
+//         margin-right: 0.5rem
 
-        &:hover
-            color: #4a89dc
-            transform: scale(1.1)
-            transition: visibility 0.1s, transform 0.2s
+//         &:hover
+//             color: #4a89dc
+//             transform: scale(1.1)
+//             transition: visibility 0.1s, transform 0.2s
 
-        &.active
-            transform: scale(1.1)
-            color: #4a89dc
+//         &.active
+//             transform: scale(1.1)
+//             color: #4a89dc
 
+// .rating-system .d-flex
+//     width: 100%
+//     justify-content: flex-end
+//     margin-right: 1.5rem
 
-.rating-system .d-flex 
-    width: 100%
-    justify-content: flex-end
-    margin-right: 1.5rem
-
-    
-.form-floating
-    margin-right: 1rem
-    margin-left: 1rem
-    margin-bottom: 2rem
+// .form-floating
+//     margin-right: 1rem
+//     margin-left: 1rem
+//     margin-bottom: 2rem
 
 .recommendation-item
     display: flex
@@ -59,9 +56,11 @@
     position: relative
     flex-shrink: 0
     font-size: 18px
-    padding: 35px 15px
-    border-bottom: 1px solid #f2f3f5
-    margin-bottom: 20px
+    padding: 30px 15px
+    border-bottom: 1px solid #dfdfdf
+
+    &:last-of-type
+        border-bottom: none
 
 .recommendation-item .recommendation-controls-box
     position: absolute
@@ -109,29 +108,25 @@
 .recommendation-controls-box .recommendation-control-button.is-danger:active i.material-icons
     color: rgb(189, 37, 37)
 
+.user-info
+    font-weight: bold
+    margin-right: 10px
 
+.recommendation-comment.with-border
+    border-bottom: 1px solid #f2f3f5
+    padding-bottom: 10px
 
+.leave-recommendation-container 
+    margin-left: auto
+    display: flex
+    align-items: center
+    height: 100%
+    font-weight: 400
+    color: #888888
+    cursor: pointer
 
-
-
-
-
+    &:hover
+        color: #4a89dc
+        text-decoration: underline
     
-// .rating-system
-//     display: flex
-//     flex-direction: row
-//     align-items: center
-//     justify-content: space-between
-//     width: 9%
-//     height: 100%
-//     margin-bottom: 0.5rem
-//     // .rating-system__star
-//     //     cursor: pointer
-//     //     font-size: 2rem
-//     //     color: #ccc
-//     //     transition: color 200ms
-//     //     &:hover
-//     //     color: #ffca28
-//     //     &.active
-//     //     color: #ffca28
-//     // ```
+
