--- a/frontend/src/app/user-profile/user-profile.component.html
+++ b/frontend/src/app/user-profile/user-profile.component.html
@@ -136,6 +136,8 @@
           </div>
         </div>
       </div>
+
+      <app-recommendation></app-recommendation>
       
       <hr class="d-print-none" />
       
